# stikb

./: .gitignore  README.md  find.py  graphql.config.yaml  pyproject.toml  test.py
.github/workflows/: docker-master.yaml  quality.yaml  release.yaml
graphql/mutations/: integration.graphql  project.graphql
stikb/: builders.py  deployed.py  errrors.py  funcs.py  rath.py  stikb.py  structures.py  traits.py
stikb/api/: schema.py
stikb/contrib/: __init__.py  arkitekt_repository.py
stikb/deployments/test/: docker-compose.yml
stikb/deployments/test/configs/: stikb.yaml
tests/: conftest.py  test_integration.py  test_succeed.py  utils.py
