[tool.poetry]
name = "stikb"
version = "0.0.3"
description = "omero images, but graphql"
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]
license = "CC BY-NC 3.0"
packages = [{ include = "stikb" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rath = ">=0.5.0"
dokker = ">=0.1.21"
wandb = "^0.16.3"

[tool.poetry.extras]
turms = ["turms"]


[tool.mypy]
exclude = ["venv/","stikb/api", "tests"]
ignore_missing_imports = true


[tool.ruff]
extend-select = ["ANN", "D1"]
ignore = ["ANN101"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "stikb/api",
    "tests"
]

# Same as Black.
line-length = 100

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.7"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
turms = { version = ">=0.3.1", python = "^3.9" }
aiohttp = "^3.8.3"
websockets = "^10.4"
black = "^23.1.0"
pytest-cov = "^4.0.0"
pytest-aiohttp = "^1.0.4"
ruff = ">=0.0.291"
mypy = "^1.0.1"
pyjwt = "^2.8.0"
cryptography = "^41.0.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a deployment via testcontainers",
]
log_cli = true
log_cli_level = "INFO"

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["mikro"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"
